--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,4 @@ target-version = ['py38']
     verbose = 1
     color = true
     ignore-module = true
-    exclude = ["setup.py", "tasks.py"]
+    exclude = ["setup.py", "tasks.py", "examples", "build", "venv"]
